karnc/tests/fixtures/positive/207_workers_float_boundary/src/quote.karn
context quote

type Quote = {
  sku: String,
  price: Float,
  qty: Int,
}

service quotes {
  on call(sku: String, price: Float) -> Effect[Result[Quote, ()]] {
    Ok(Quote { sku: sku, price: price * 1.2, qty: 1 })
  }
}
