karnc/tests/fixtures/negative/133_integration_unknown_participant/src/app/a.karn
context app.a
service ping {
  on call() -> Effect[Int] { 1 }
}
